--- a/src/main/resources/templates/editRecipe.html
+++ b/src/main/resources/templates/editRecipe.html
@@ -147,8 +147,8 @@
 
             <div class="form-group">
                 <label>대표 이미지</label>
-                <div th:if="${recipe.mainImagePath != null}">
-                    <img th:src="${recipe.mainImagePath}" alt="현재 이미지" class="current-image">
+                <div th:if="${recipe.mainImageType != null}">
+                    <img th:src="@{'/recipe/image/' + ${recipe.id}}" alt="현재 이미지" class="current-image">
                     <p style="font-size: 13px; color: #888;">새 이미지를 선택하면 기존 이미지가 교체됩니다.</p>
                 </div>
                 <input type="file" name="mainImage" accept="image/*">
