refactor:홈페이지 꾸미기

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -199,16 +199,9 @@
     </div>
 
     <div class="menu-section">
-        <h3>🍳 레시피 검색</h3>
-        <ul class="menu-list">
-            <li><a href="/recipe/list" class="highlight-orange">🔍 보유 식재료로 레시피 찾기</a></li>
-        </ul>
-    </div>
-
-    <div class="menu-section">
         <h3>✍️ 레시피 게시판</h3>
         <ul class="menu-list">
-            <li><a href="/recipe/list?source=user">📚 사용자 레시피</a></li>
+            <li><a href="/recipe/list">📚 사용자 레시피</a></li>
             <li><a href="/recipe/my-recipes">👤 내 레시피</a></li>
             <li><a href="/recipe/create" class="highlight-red">➕ 새 레시피 작성</a></li>
             <li><a href="/recipe/liked-recipes">❤️ 좋아요한 레시피</a></li>
