--- a/src/main/resources/templates/createRecipe.html
+++ b/src/main/resources/templates/createRecipe.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="/images/logo.png">
     <title>레시피 작성</title>
     <style>
         body {
