--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="/images/logo.png">
     <title>냉털이 - LeftOut</title>
     <style>
         * {
@@ -25,8 +26,11 @@
             margin-bottom: 30px;
         }
         .logo {
-            font-size: 48px;
             margin-bottom: 10px;
+        }
+        .logo img {
+            width: 80px;
+            height: 80px;
         }
         .brand {
             font-size: 32px;
@@ -353,7 +357,7 @@
 <body>
 <div class="container">
     <div class="header">
-        <div class="logo">🧊</div>
+        <div class="logo"><img src="/images/logo.png" alt="냉털이 로고"></div>
         <div class="brand">냉털이</div>
         <div class="brand-sub">LeftOut - 냉장고 털기 프로젝트</div>
     </div>
