--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,6 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="/images/logo.png">
     <title>로그인</title>
     <style>
         body {
