--- a/src/main/resources/templates/myRecipes.html
+++ b/src/main/resources/templates/myRecipes.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="/images/logo.png">
     <title th:text="${pageTitle}">내 레시피</title>
     <style>
         body {
