--- a/src/main/resources/templates/recipeDetail.html
+++ b/src/main/resources/templates/recipeDetail.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="/images/logo.png">
     <title th:text="|${recipe.title} - 레시피 상세|">레시피 상세</title>
     <style>
         body {
