--- a/src/main/resources/templates/updateIngredient.html
+++ b/src/main/resources/templates/updateIngredient.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="/images/logo.png">
     <title>식재료 수정</title>
     <style>
         body {
